<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [<!ENTITY appversion "0.1.2"> <!ENTITY appname "D&amp;DB">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_spells">Spells</string>
    <string name="default_content_txt">To get started, select a category</string>
    <string name="spells_btn_filter_spells">Filter Spells</string>
    <string name="label_spelllevel">Lvl :</string>
    <string name="label_spellschool">School :</string>
    <string name="label_spellcasttime">Casting Time :</string>
    <string name="label_spellcomponent">Components :</string>
    <string name="label_spellduration">Duration :</string>
    <string name="label_spellrange">Range/Area :</string>
    <string name="label_spelltargets">Target(s) :</string>
    <string name="label_spellattacks">Attack Type(s) :</string>
    <string name="label_spelldamages">Damage Type(s) :</string>
    <string name="label_spellconditions">Condition(s) :</string>
    <string name="label_spellsaves">Saving Throw(s) :</string>
    <string name="label_spellsclasses">Available for :</string>
    <string name="label_spellsources">Spell Source(s) :</string>
    <string name="placeholder_spellname">SPELLNAME</string>
    <string name="placeholder_spelllevel">LEVEL</string>
    <string name="placeholder_spellschool">SCHOOL</string>
    <string name="placeholder_spellcasttime">CASTTIME</string>
    <string name="placeholder_spelldescription">SPELLDESCRIPTION</string>
    <string name="placeholder_spellhigherlevel">SPELLHIGHERLVLDESC</string>
    <string name="placeholder_spellcomponent">COMPS</string>
    <string name="placeholder_errorheader">ERRORHEADER</string>
    <string name="placeholder_errorbody">ERRORBODY</string>
    <string name="placeholder_spellduration">DURATION</string>
    <string name="placeholder_spellrange">RANGE</string>
    <string name="placeholder_spelltargets">TARGETS</string>
    <string name="placeholder_spellattacks">None</string>
    <string name="placeholder_spelldamages">None</string>
    <string name="placeholder_spellconditions">None</string>
    <string name="placeholder_spellsaves">None</string>
    <string name="placeholder_spellreactiondesc">REACTIONDESC</string>
    <string name="placeholder_spellmaterials">MATERIALS</string>
    <string name="placeholder_spellclasses">CLASSES</string>
    <string name="placeholder_spellsources">SOURCES</string>
    <string name="general_spell_athigherlevels">At higher levels</string>
    <string name="general_button_search">Search</string>
    <string name="general_button_cancel">Cancel</string>
    <string name="label_spell_filter_header">Search Spells</string>
    <string name="placeholder_spellfilter_spellname">Hunter\'s Mark</string>
    <string name="label_spell_filter_desc">Also search spell description</string>
    <string name="label_spell_filter_materialtxt">Also search spell materials</string>
    <string name="label_spell_filter_level">Level</string>
    <string name="label_spell_filter_school">School</string>
    <string name="label_spell_filter_duration">Duration</string>
    <string name="label_spell_filter_casttime">Casting Time</string>
    <string name="label_spell_filter_concentration">Concentration</string>
    <string name="label_spell_filter_ritual">Ritual</string>
    <string name="label_spell_filter_verbal">Verbal</string>
    <string name="label_spell_filter_somatic">Somatic</string>
    <string name="label_spell_filter_material">Material</string>
    <string name="label_spell_filter_material_mincost">Minimum Material Cost (in gp)</string>
    <string name="label_spell_filter_material_maxcost">Maximum Material Cost (in gp)</string>
    <string name="label_spell_filter_target">Target</string>
    <string name="label_spell_filter_ability">Saving Throw</string>
    <string name="label_spell_filter_atktype">Attack Type</string>
    <string name="label_spell_filter_dmgtype">Damage Type</string>
    <string name="label_spell_filter_condition">Condition</string>
    <string name="label_spell_filter_source">Source Book</string>
    <string name="label_spell_filter_class">Spell Class</string>
    <string name="label_spell_filter_range">Range</string>
    <string name="spells_btn_sort_spells">Sort Spells</string>
    <string name="label_spell_sort">Sort by :</string>
    <string name="general_button_sort">Sort</string>
    <string name="label_spell_sort_header">Sort Spells</string>
    <string name="about_text">&appname; is an application for browsing data from
        the 5th edition ruleset of <i>Dungeons &amp; Dragons</i>.\n\n
        Author : <a href="https://github.com/dseguin">David Seguin</a>\n
        App Version : &appversion;\n
        Source Code : <a href="https://github.com/dseguin/dndb">GitHub</a>\n
        License : <a href="https://github.com/dseguin/dndb/blob/stable/LICENSE">MIT</a>\n
        \nMaterial included in this app is derived only from the
        <a href="https://dnd.wizards.com/articles/features/systems-reference-document-srd">SRD</a>
        and other sources released under the
        <a href="https://media.wizards.com/2016/downloads/DND/SRD-OGL_V5.1.pdf">Open Game License</a>
        or as free source material by <i>Wizards of the Coast</i>.
    </string>
    <string name="label_spell_sort_descending">Sort in descending order</string>
    <string name="label_spell_filter_exclude">Exclude selected components</string>
    <string name="label_settings_header">Settings</string>
    <string name="label_settings_import_source">Import Source</string>
    <string name="label_settings_import_source_desc">Loads a sourcebook package and adds it to the current database.</string>
    <string name="label_settings_reset_db">Reset Database</string>
    <string name="label_settings_reset_db_desc">Deletes all data from the database and refills it with default data.</string>
    <string name="general_confirm_dialog_title">Are you sure?</string>
    <string name="general_button_confirm">Confirm</string>
    <string name="label_settings_reset_db_confim_msg">Are you sure you want to reset your database to initial defaults?</string>
    <string name="menu_bookmarks">Spell Bookmarks</string>
    <string name="label_error_header">You rolled a NAT 1!</string>
    <string name="placeholder_bookmarkname">BOOKMARKNAME</string>
    <string name="label_bookmarklistitem_delete_btn">Delete</string>
    <string name="label_bookmarklistitem_delete_msg">Are you sure you want to delete this bookmark?</string>
    <string name="label_bookmarklist_dialogadd_title">Create a new bookmark</string>
    <string name="placeholder_bookmarklist_dialogadd_name">Offensive/Utility</string>
    <string name="spells_btn_addtobookmark">Bookmark</string>
    <string name="label_spell_addtobookmark_title">Add to bookmark</string>
    <string name="label_spell_addtobookmark_nobookmarkmsg">You don\'t have any bookmarks!</string>
    <string name="label_bookmarkitem_delete_msg">Are you sure you want to remove this spell from this bookmark?</string>
</resources>
