<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_group_categories"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_spells"
            android:title="@string/menu_spells"
            app:showAsAction="never"/>
    </group>
    <group
        android:id="@+id/menu_group_other"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about"
            android:icon="@android:drawable/ic_menu_info_details"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_exit"
            android:title="@string/menu_exit"
            android:icon="@android:drawable/ic_lock_power_off"
            app:showAsAction="never"/>
    </group>
</menu>