<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/label_spell_filter_header"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:hint="@string/placeholder_spellfilter_spellname"
            android:id="@+id/spellfilter_spellname"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingHorizontal="10dp"
                android:labelFor="@id/spellfilter_description_checkbox"
                android:layout_gravity="center_vertical"
                android:text="@string/label_spell_filter_desc"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spellfilter_description_checkbox"
                android:checked="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingHorizontal="10dp"
                android:labelFor="@id/spellfilter_materialtxt_checkbox"
                android:layout_gravity="center_vertical"
                android:text="@string/label_spell_filter_materialtxt"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spellfilter_materialtxt_checkbox"
                android:checked="false"/>
        </GridLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/label_spell_filter_ritual"
            android:id="@+id/spellfilter_ritual_checkbox"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/label_spell_filter_concentration"
            android:id="@+id/spellfilter_concentration_checkbox"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_level_spinner"
                android:text="@string/label_spell_filter_level"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_level_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_school_spinner"
                android:text="@string/label_spell_filter_school"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_school_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_duration_spinner"
                android:text="@string/label_spell_filter_duration"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_duration_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_casttime_spinner"
                android:text="@string/label_spell_filter_casttime"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_casttime_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_target_spinner"
                android:text="@string/label_spell_filter_target"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_target_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_ability_spinner"
                android:text="@string/label_spell_filter_ability"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_ability_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_atktype_spinner"
                android:text="@string/label_spell_filter_atktype"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_atktype_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_dmgtype_spinner"
                android:text="@string/label_spell_filter_dmgtype"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_dmgtype_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_condition_spinner"
                android:text="@string/label_spell_filter_condition"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_condition_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_source_spinner"
                android:text="@string/label_spell_filter_source"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_source_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/spellfilter_class_spinner"
                android:text="@string/label_spell_filter_class"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                android:paddingVertical="2dp"
                style="@style/left_spinner_style"
                android:id="@+id/spellfilter_class_spinner"/>
        </GridLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_spellcomponent"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingRight="20dp"
                android:text="@string/label_spell_filter_verbal"
                android:id="@+id/spellfilter_verbal_checkbox"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_rowSpan="3"
                android:layout_gravity="center_vertical"
                android:textSize="12sp"
                android:text="@string/label_spell_filter_exclude"
                android:id="@+id/spellfilter_exclude_component"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingRight="20dp"
                android:text="@string/label_spell_filter_somatic"
                android:id="@+id/spellfilter_somatic_checkbox"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingRight="20dp"
                android:text="@string/label_spell_filter_material"
                android:id="@+id/spellfilter_material_checkbox"/>
        </GridLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_spell_filter_range"/>
        <EditText
            android:id="@+id/spellfilter_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="30 feet"
            android:inputType="text"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_spell_filter_material_mincost"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="50"
            android:inputType="number"
            android:id="@+id/spellfilter_material_mincost"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_spell_filter_material_maxcost"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="1000"
            android:inputType="number"
            android:id="@+id/spellfilter_material_maxcost"/>
    </LinearLayout>
</ScrollView>