<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/spells_listview_item">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_spellname"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            android:id="@+id/spells_listview_item_spellname"/>
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:src="@drawable/concentration"
            android:id="@+id/spells_listview_item_concentration"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:src="@drawable/ritual"
            android:id="@+id/spells_listview_item_ritual"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_spelllevel"/>
        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_spelllevel"
            android:id="@+id/spells_listview_item_level"/>
        <Space
            android:layout_width="140dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_spellschool"/>
        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_spellschool"
            android:id="@+id/spells_listview_item_school"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_spellcasttime"/>
        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_spellcasttime"
            android:id="@+id/spells_listview_item_casttime"/>
        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_spellcomponent"/>
        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_spellcomponent"
            android:id="@+id/spells_listview_item_component"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>
</LinearLayout>