<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:text="@string/label_spell_sort_header"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/label_spell_sort"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="30dp"
            style="@style/left_spinner_style"
            android:id="@+id/spellsort_spinner"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_spell_sort_descending"
        android:textStyle="italic"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/spellsort_descending_checkbox"/>
</LinearLayout>